Simplify UI and remove alerts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App - Current Weather & Forecasts</title>
-    <meta name="description" content="Get accurate weather forecasts, current conditions, and 5-day weather outlook for cities worldwide. Real-time weather data with beautiful glassmorphism design." />
+    <meta name="description" content="Get accurate weather forecasts and 5-day weather outlook for cities worldwide." />
     <meta name="author" content="Weather App" />
     <meta name="keywords" content="weather, forecast, temperature, weather app, current weather, weather conditions" />
 
