feat: translate UI to Spanish

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App - Current Weather & Forecasts</title>
-    <meta name="description" content="Get accurate weather forecasts and 5-day weather outlook for cities worldwide." />
-    <meta name="author" content="Weather App" />
-    <meta name="keywords" content="weather, forecast, temperature, weather app, current weather, weather conditions" />
+    <title>Aplicación del clima - Clima actual y pronósticos</title>
+    <meta name="description" content="Obtén pronósticos meteorológicos precisos y un pronóstico de 5 días para ciudades de todo el mundo." />
+    <meta name="author" content="Aplicación del clima" />
+    <meta name="keywords" content="clima, pronóstico, temperatura, aplicación del clima, clima actual, condiciones meteorológicas" />
 
-    <meta property="og:title" content="Weather App - Current Weather & Forecasts" />
-    <meta property="og:description" content="Get accurate weather forecasts, current conditions, and 5-day weather outlook for cities worldwide." />
+    <meta property="og:title" content="Aplicación del clima - Clima actual y pronósticos" />
+    <meta property="og:description" content="Obtén pronósticos meteorológicos precisos, condiciones actuales y un pronóstico de 5 días para ciudades de todo el mundo." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
